# rest_rpg/src/main/java/com/michael1099/rest_rpg/character/CharacterController.java
@@ -5,8 +5,11 @@ import lombok.RequiredArgsConstructor;
 import org.openapitools.api.CharacterApi;
 import org.openapitools.model.CharacterCreateRequest;
 import org.openapitools.model.CharacterLite;
+import org.springframework.core.io.Resource;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
@@ -19,5 +22,20 @@ public class CharacterController implements CharacterApi {
     public ResponseEntity<CharacterLite> createCharacter(CharacterCreateRequest characterCreateRequest) {
         var username = authenticationFacade.getAuthentication().getName();
         return ResponseEntity.ok(characterService.createCharacter(characterCreateRequest, username));
+    }
+
+    @Override
+    public ResponseEntity<Resource> getCharacterArtwork(String characterArtwork) {
+        return characterService.getCharacterFullArtwork(characterArtwork);
+    }
+
+    @Override
+    public ResponseEntity<List<String>> getCharacterArtworkEnum() {
+        return ResponseEntity.ok(characterService.getCharacterArtworkEnum());
+    }
+
+    @Override
+    public ResponseEntity<Resource> getCharacterArtworkThumbnail(String characterArtwork) {
+        return characterService.getCharacterThumbnailArtwork(characterArtwork);
     }
 }
